# OpenVeris

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  scrape_nazk_by_year.py  scrape_nazk_workers.py
.github/workflows/: code-quality.yml
config/data/scrapers/: nazk.yaml
deployment/: docker-compose.yml
migrations/: 001_initial_schema.sql  002_fix_declarant_uniqueness.sql  003_add_submission_date_and_rename_fields.sql  004_link_family_members_to_declarants.sql  README.md
scripts/: format.sh  lint.sh
scripts/data/scrapers/: scrape_nazk_by_year.py  scrape_nazk_workers.py
src/data/: loaders.py  preprocessors.py
src/data/scrapers/: __init__.py
src/data/scrapers/nazk/: README.md  __init__.py  config.py  models.py  postgres_storage.py  schemas.py  scrape_nazk_by_year.py  scrape_nazk_workers.py  scraper.py
src/features/: selection.py
src/utils/: logger.py
