[project]
name = "OpenVeris"
version = "0.0.1"
description = "The automated anomaly detection system for Ukrainian public officials' asset declarations."
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "rich"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "nbdev",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

# Configure PyTorch to use CUDA 12.6 wheels
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }